improve the sortable widget with direction, tolerance and handle fix CSS to prevent horizontal scroll Signed-off-by:Guillaume Martigny <guillaume.martigny@gmail.com>

--- a/src/css/frames-list.css
+++ b/src/css/frames-list.css
@@ -51,7 +51,7 @@
 
 .preview-list {
   list-style-type: none;
-  padding-right: 7px;
+  padding-right: 9px;
 }
 
 .add-frame-action {
@@ -158,13 +158,13 @@
 }
 
 .preview-tile.selected:after {
-  content: " ";
+  content: "";
   position: absolute;
   top: 38px;
-  right: -15px;
+  right: -9px;
   border: transparent 4px solid;
   border-left-color: gold;
-  border-width: 6px;
+  border-width: 6px 0 6px 6px;
   border-style: solid;
 }
 
@@ -175,7 +175,5 @@
 
 .preview-tile-drop-proxy {
   border: 3px dashed gold;
-  height: 90px;
-  border-radius: 9px;
   background-color: rgba(255, 215,0, 0.2);
 }
